update dark mode svg and fix formatting

--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@
     --accent-color: #D8CF6F;
     --text-color: #000000;
     --font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    --aside-width: 200px;
 }
 
 html {
@@ -58,6 +57,7 @@ button.nav-button {
 
 #dark-mode-button {
     width: 60px;
+    background-color: var(--main-color);
 }
 
 button.nav-button:hover {
@@ -76,17 +76,20 @@ button.nav-button:hover {
 
 #aside-grid {
     display: grid;
-    grid-template: 1fr / 3fr 200px;
+    grid-template: 1fr / 1fr auto;
 }
 
 aside {
     position: sticky;
-    background-color: red;
-    height: 100vh;
-    width: var(--aside-width);
-    top: 0vh;
+    background-color: var(--background-color);
+    height: 70vh;
+    margin-left: 50px;
+    margin-right: 5vw;
+    width: min(25vw, 300px);
+    top: 15vh;
     font-family: var(--font-family);
-    font-size: 23px;
+    color: var(--text-color);
+    font-size: 15px;
     overflow-y: scroll;
 }
 
@@ -97,7 +100,13 @@ aside::-webkit-scrollbar {
 /* MAIN SECTIONS */
 
 #main-content {
-    background-color: blue;
+    justify-self: center;
+    display: flex;
+    flex-direction: column;
+    width: 50vw;
+    align-items: center;
+    background-color: var(--background-color);
     font-family: var(--font-family);
-    font-size: 50px;
+    color: var(--text-color);
+    font-size: 15px;
 }
